# skillrank

./: Cargo.toml  LICENSE  README.md  package.json  wrangler.toml
content/: create.html  index.html  player.html  session.html
src/: lib.rs  rankings.rs  scripts.rs  utils.rs
src/games/: mod.rs
src/games/matchmaking/: active.rs  mod.rs
src/matchmaking/: active.rs  mod.rs
src/rankings/: matches.rs  mod.rs  pass.rs  players.rs  rankings.rs  session.rs
