[package]
name = "skillrank-app"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.11"
serde_json = "1.0.85"
serde = { version = "1.0.147", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
skillratings = { git = "https://github.com/jspspike/skillratings", features = ["serde"] }
serde-wasm-bindgen = "0.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = "fat"
